--- a/chatgpt-core/pom.xml
+++ b/chatgpt-core/pom.xml
@@ -11,14 +11,33 @@
     <artifactId>chatgpt-core</artifactId>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.damm.common</groupId>
+            <artifactId>chatgpt-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!--引入spring相关组件-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!--引入Maxmin-->
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-minimax-spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
